# everybody.codes

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/lib/: iterators.rs  mod.rs  num.rs  parsing.rs
src/lib/spatial/: matrix.rs  mod.rs  point.rs
src/solvers/year_2024/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs
src/solvers_2024/: day_01.rs
