[package]
name = "everybody_solves"
version = "0.1.0"
edition = "2021"

[lib]
name = "everybody_helps"
path = "src/lib/mod.rs"

[[bin]]
name = "everybody_solves"
path = "src/main.rs"

[dependencies]
paste = "1.0.15"
jikan = { git = "https://github.com/newo-2001/jikan" }
anyhow = "1.0.93"
serde_yml = "0.0.12"
itertools = "0.13.0"
nom = "7.1.3"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
missing_errors_doc = "allow"

[lints.rust]
unsafe_code = "forbid"