cargo-features = ["edition2024"]

[package]
name = "everybody_solves"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "everybody_solves"
path = "src/main.rs"

[dependencies]
jikan = { git = "https://github.com/newo-2001/jikan" }
yuki = { git = "https://github.com/newo-2001/yuki" }
paste = "1.0.15"
anyhow = "1.0.93"
serde_yml = "0.0.12"
itertools = "0.13.0"
nom = "7.1.3"
thiserror = "2.0.3"
ahash = "0.8.11"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
missing_errors_doc = "allow"

[lints.rust]
unsafe_code = "forbid"
